@@ -4,6 +4,4 @@
   <Edit Name="prpQNH" Caption="QNH" X="2" Y="2" Width="80" Height="22" CaptionWidth="30" Help="Area pressure for barometric altimeter calibration.  This is set automatically if Vega connected.">
     <DataField DataType="double" OnDataAccess="PnlSetupOnQNH"/>
   </Edit>
-
-  <Button Name="cmdSetup" Caption="Switch InfoBox" X="-85" Y="2" Width="80" Height="45" onClick="PnlSetupOnSetup"/>
 </Panel>
