@@ -9,6 +9,7 @@ Version 6.4.4 - not yet released
   - fix font preview in configuration dialog
   - fix the Escape key on Altair
   - fix wind InfoBox dialog layout (#2192)
+  - add missing "Switch InfoBox" button (#2246)
 * Android
   - fix text rendering on some PowerVR GPUs
 
